fixed img size on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,8 @@
     }
 
     img{
-      width: 100%;
+      width: 100vw;
+      border-radius: 0;
       height: auto;
     } 
   }
